--- a/reset-password-success.html
+++ b/reset-password-success.html
@@ -189,6 +189,9 @@
     			<div class="cell">
     				<h1 class="subheader">Orari</h1>
     				<ul class="orari-footer-schedule no-bullet">
+    					<li>Lunedì 30 ottobre chiusi.</li>
+    					<li>Martedì 31 ottobre aperti.</li>
+    					<br>
     					<li><span>Lunedì:</span><time>19 - 22</time></li>
     					<li><span>Martedì:</span><time>Chiusi</time></li>
     					<li><span>Mercoledì:</span><time>19 - 22</time></li>
