--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
     				<h2>Ristorante</h2>
     				<!-- <p>Il lunedì non serviamo sushi.</p> -->
     				<ul class="orari-schedule no-bullet">
+    					<li>Lunedì 30 ottobre chiusi.</li>
+    					<li>Martedì 31 ottobre aperti.</li>
+    					<br>
     					<li><span>Lunedì:</span><time>19 - 22</time></li>
     					<li><span>Martedì:</span><time>Chiusi</time></li>
     					<li><span>Mercoledì:</span><time>19 - 22</time></li>
@@ -90,6 +93,9 @@
     				<h2>Asporto</h2>
     				<!-- <p>Il lunedì non serviamo sushi.</p> -->
     				<ul class="orari-schedule no-bullet">
+    					<li>Lunedì 30 ottobre chiusi.</li>
+    					<li>Martedì 31 ottobre aperti.</li>
+    					<br>
     					<li><span>Lunedì:</span><time>19 - 21:45</time></li>
     					<li><span>Martedì:</span><time>Chiusi</time></li>
     					<li><span>Mercoledì:</span><time>19 - 21:45</time></li>
@@ -350,6 +356,9 @@
     			<div class="cell">
     				<h1 class="subheader">Orari</h1>
     				<ul class="orari-footer-schedule no-bullet">
+    					<li>Lunedì 30 ottobre chiusi.</li>
+    					<li>Martedì 31 ottobre aperti.</li>
+    					<br>
     					<li><span>Lunedì:</span><time>19 - 22</time></li>
     					<li><span>Martedì:</span><time>Chiusi</time></li>
     					<li><span>Mercoledì:</span><time>19 - 22</time></li>
