--- a/account.html
+++ b/account.html
@@ -14,6 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Il mio account | Ca' Vecchia Beerstrot </title>
     <meta name="description" content="Ordini salvati e i tuoi dati per l&#x27;asporto e le prenotazioni">
+    <meta name="keywords" content="il mio account, Ca&#x27; Vecchia Beerstrot, Filottrano.">
     <meta name="author" content="Ca' Vecchia Beerstrot">
     <meta name="copyright" content="Beerstrot Copyright (c) 2023">
     <link rel="canonical" href="https://www.beerstrot.it/account.html">
