--- a/chi-siamo.html
+++ b/chi-siamo.html
@@ -14,6 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chi Siamo | Ca' Vecchia Beerstrot </title>
     <meta name="description" content="Una filosofia semplice: siamo specialisti in Hamburger Goduriosi e Birre artigianali, ma quelle buone, in un locale bellissimo. Qui puoi trovare anche informazioni legali, su come contattarci e sul tipo di esperienza che puoi vivere a Ca&#x27; Vecchia Beerstrot.">
+    <meta name="keywords" content="Contatti Ca&#x27; Vecchia Beerstrot, Prenotazione Ristorante Filottrano, Dove siamo Ca&#x27; Vecchia Beerstrot, Galleria fotografica Ca&#x27; Vecchia Beerstrot, Privacy Policy Ca&#x27; Vecchia Beerstrot, Storia Ca&#x27; Vecchia Beerstrot, Team Ca&#x27; Vecchia Beerstrot">
     <meta name="author" content="Ca' Vecchia Beerstrot">
     <meta name="copyright" content="Beerstrot Copyright (c) 2023">
     <link rel="canonical" href="https://www.beerstrot.it/chi-siamo.html">
