--- a/disiscrizione.html
+++ b/disiscrizione.html
@@ -14,6 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Conferma disiscrizione | Ca' Vecchia Beerstrot </title>
     <meta name="description" content="Conferma disiscrizione dalle news">
+    <meta name="keywords" content="">
     <meta name="author" content="Ca' Vecchia Beerstrot">
     <meta name="copyright" content="Beerstrot Copyright (c) 2023">
     <link rel="canonical" href="https://www.beerstrot.it/disiscrizione.html">
