--- a/riserva-un-tavolo.html
+++ b/riserva-un-tavolo.html
@@ -14,6 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Riserva un Tavolo | Ca' Vecchia Beerstrot </title>
     <meta name="description" content="Riserva un Tavolo a Ca&#x27; Vecchia Beerstrot direttamente dal nostro sito web">
+    <meta name="keywords" content="Prenotazione Ristorante Filottrano">
     <meta name="author" content="Ca' Vecchia Beerstrot">
     <meta name="copyright" content="Beerstrot Copyright (c) 2023">
     <link rel="canonical" href="https://www.beerstrot.it/riserva-un-tavolo.html">
