--- a/sala-comandi.html
+++ b/sala-comandi.html
@@ -14,6 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sala Comandi | Ca' Vecchia Beerstrot </title>
     <meta name="description" content="Sala comandi gestione e analisi">
+    <meta name="keywords" content="">
     <meta name="author" content="Ca' Vecchia Beerstrot">
     <meta name="copyright" content="Beerstrot Copyright (c) 2023">
     <link rel="canonical" href="https://www.beerstrot.it/sala-comandi.html">
