--- a/404.html
+++ b/404.html
@@ -14,6 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina non trovata | Ca' Vecchia Beerstrot </title>
     <meta name="description" content="questa pagina non esiste">
+    <meta name="keywords" content="">
     <meta name="author" content="Ca' Vecchia Beerstrot">
     <meta name="copyright" content="Beerstrot Copyright (c) 2023">
     <link rel="canonical" href="https://www.beerstrot.it/404.html">
