--- a/asporto.html
+++ b/asporto.html
@@ -14,6 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ordina da Asporto | Ca' Vecchia Beerstrot </title>
     <meta name="description" content="Stai guardando la tua serie tv preferita da sola o con le amiche e gli amici e hai voglia di mettere qualcosa sotto i denti? Stai tifando per la tua squadra del cuore e ti è venuto un certo languore? Ordina l&#x27;Asporto online">
+    <meta name="keywords" content="Ristorante Filottrano, Hamburger Artigianali, Sushi Filottrano, Sushi Ancona, Birra Artigianale, Ca&#x27; Vecchia Beerstrot, Ordina da Asporto Online, Asporto Ca&#x27; Vecchia Beerstrot, Consegna a domicilio Filottrano, Ristorante take away Ancona, Menu asporto Ca&#x27; Vecchia, Hamburger asporto Filottrano, Sushi delivery Ancona, Cucina italiana take away, Piatti artigianali da asporto, Servizio di asporto ristoranti Filottrano, Ordine online Ca&#x27; Vecchia Beerstrot, Cena da asporto vicino me, Cena familiare asporto Ancona, Cibo di qualità asporto, Ordina cibo online Filottrano, Ristorante con asporto rapido">
     <meta name="author" content="Ca' Vecchia Beerstrot">
     <meta name="copyright" content="Beerstrot Copyright (c) 2023">
     <link rel="canonical" href="https://www.beerstrot.it/asporto.html">
@@ -1015,7 +1016,7 @@
     				<section class="grid-x grid-margin-x grid-margin-y" id="bevanda" data-magellan-target="bevanda">
     					<div class="small-12 cell">
     						<h2>Bevande</h2>
-    						<div class="grid-x small-up-1 medium-up-2 xxlarge-up-3 grid-margin-x grid-margin-y noimage">
+    						<div class="grid-x small-up-2 medium-up-2 xxlarge-up-3 grid-margin-x grid-margin-y noimage">
     							<div class="cell">
     								<div class="card">
     									<div class="card-section">
@@ -1068,7 +1069,7 @@
     				<section class="grid-x grid-margin-x grid-margin-y" id="birra" data-magellan-target="birra">
     					<div class="small-12 cell">
     						<h2>Birra Artigianale in Bottiglia</h2>
-    						<div class="grid-x small-up-1 medium-up-2 xxlarge-up-3 grid-margin-x grid-margin-y noimage">
+    						<div class="grid-x small-up-2 medium-up-2 xxlarge-up-3 grid-margin-x grid-margin-y noimage">
     							<div class="cell">
     								<div class="card">
     									<div class="card-section">
@@ -1121,7 +1122,7 @@
     				<section class="grid-x grid-margin-x grid-margin-y" id="vino" data-magellan-target="vino">
     					<div class="small-12 cell">
     						<h2>Vino</h2>
-    						<div class="grid-x small-up-1 medium-up-2 xxlarge-up-3 grid-margin-x grid-margin-y noimage">
+    						<div class="grid-x small-up-2 medium-up-2 xxlarge-up-3 grid-margin-x grid-margin-y noimage">
     							<div class="cell">
     								<div class="card">
     									<div class="card-section">
