--- a/checkout-landing.html
+++ b/checkout-landing.html
@@ -14,6 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ordine confermato. Grazie | Ca' Vecchia Beerstrot </title>
     <meta name="description" content="Ordine d&#x27;asporto inviato correttamente. Questa è una conferma dell&#x27;ordine.">
+    <meta name="keywords" content="">
     <meta name="author" content="Ca' Vecchia Beerstrot">
     <meta name="copyright" content="Beerstrot Copyright (c) 2023">
     <link rel="canonical" href="https://www.beerstrot.it/checkout-landing.html">
