--- a/checkout.html
+++ b/checkout.html
@@ -14,6 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Checkout | Ca' Vecchia Beerstrot </title>
     <meta name="description" content="Finalizza il tuo ordine d&#x27;asporto e invialo.">
+    <meta name="keywords" content="">
     <meta name="author" content="Ca' Vecchia Beerstrot">
     <meta name="copyright" content="Beerstrot Copyright (c) 2023">
     <link rel="canonical" href="https://www.beerstrot.it/checkout.html">
