--- a/consulta.html
+++ b/consulta.html
@@ -14,6 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tavolo riservato. Grazie | Ca' Vecchia Beerstrot </title>
     <meta name="description" content="Il tavolo è stato riservato. Grazie. Qui puoi cancellare la prenotazione o modificarla.">
+    <meta name="keywords" content="">
     <meta name="author" content="Ca' Vecchia Beerstrot">
     <meta name="copyright" content="Beerstrot Copyright (c) 2023">
     <link rel="canonical" href="https://www.beerstrot.it/consulta.html">
