--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Specialisti in Sushi e Hamburger Goduriosi | Ca' Vecchia Beerstrot </title>
     <meta name="description" content="Siamo specialisti in Sushi e Hamburger Goduriosi e Birra Artigianale, ma quella buona">
+    <meta name="keywords" content="Ristorante Filottrano, Hamburger Artigianali, Sushi Filottrano, Sushi Ancona, Birra Artigianale, Ca&#x27; Vecchia Beerstrot">
     <meta name="author" content="Ca' Vecchia Beerstrot">
     <meta name="copyright" content="Beerstrot Copyright (c) 2023">
     <link rel="canonical" href="https://www.beerstrot.it">
