--- a/menu.html
+++ b/menu.html
@@ -14,6 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menù | Ca' Vecchia Beerstrot </title>
     <meta name="description" content="Gli Hamburger, di nostra produzione, contengono solo carne di vacca marchigiana di prima scelta e l&#x27;arte della perfetta macinatura. Per creare i nostri Hamburger utilizziamo verdure di stagione e prodotti di piccole realtà marchigiane. Il Sushi: partiamo da un riso marinato e cotto alla perfezione per creare roll deliziosi.">
+    <meta name="keywords" content="Menu Ca&#x27; Vecchia Beerstrot, Hamburger gourmet Filottrano, Sushi fresco Filottrano, Sushi fresco Ancona, Piatti artigianali Ca&#x27; Vecchia Beerstrot, Specialità birra artigianale Ca&#x27; Vecchia , Tendenze gastronomiche moderne">
     <meta name="author" content="Ca' Vecchia Beerstrot">
     <meta name="copyright" content="Beerstrot Copyright (c) 2023">
     <link rel="canonical" href="https://www.beerstrot.it/menu.html">
