--- a/reset-password-success.html
+++ b/reset-password-success.html
@@ -14,6 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Password Modificata | Ca' Vecchia Beerstrot </title>
     <meta name="description" content="PPassword modificata con successo">
+    <meta name="keywords" content="">
     <meta name="author" content="Ca' Vecchia Beerstrot">
     <meta name="copyright" content="Beerstrot Copyright (c) 2023">
     <link rel="canonical" href="https://www.beerstrot.it/reset-password.html">
