--- a/torte-compleanno.html
+++ b/torte-compleanno.html
@@ -14,6 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Torte Compleanno | Ca' Vecchia Beerstrot </title>
     <meta name="description" content="Per festeggiare i tuoi compleanni abbiamo creato un menù torte particolare.">
+    <meta name="keywords" content="Torte di Compleanno Ca&#x27; Vecchia Beerstrot, Torte di compleanno artigianali Filottrano, Dolci personalizzati Ca&#x27; Vecchia Beerstrot, Dolci per occasioni speciali a Ca&#x27; Vecchia Beerstrot">
     <meta name="author" content="Ca' Vecchia Beerstrot">
     <meta name="copyright" content="Beerstrot Copyright (c) 2023">
     <link rel="canonical" href="https://www.beerstrot.it/torte-compleanno.html">
