--- a/menu.html
+++ b/menu.html
@@ -1212,7 +1212,7 @@
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
-    								<h3>Rubico Lacrima Morro Alba doc<span class="price ">15,5</span></h3>
+    								<h3>Rubico Lacrima Morro Alba doc<span class="price ">15,5 | 3,5</span></h3>
     								<p class="">Cantina Marotti Campi. Rosso vivace con riflessi porpora. Ha un aroma gradevole e fruttato con richiami discreti ai fiori di ciliegio e alla viola. Il gusto è morbido, vellutato e sapido.<span class=""><br><small>Allergeni: anidride solforosa e solfiti</small></span></p>
     							</div>
     						</div>
