--- a/menu.html
+++ b/menu.html
@@ -552,7 +552,7 @@
     						</div>
     					</div>
     				</div>
-                    <p class="text-center extra-space">NB: La promozione del mercoledì "Menù Special Hamburger" non è valida sugli hamburger doppi</p>
+                    <p class="text-center extra-space">NB: La promozione del mercoledì "Menù Hamburger Special" non è valida sugli hamburger doppi</p>
     			</div>
     			<div class="small-12 cell">
     				<h2>Hamburger di Stagione<small>Serviti a cottura media e con patate fritte</small></h2>
@@ -720,7 +720,7 @@
                             </div>
                         </div>
     				</div>
-                    <p class="text-center extra-space">NB: La promozione del mercoledì "Menù Special Hamburger" non è valida sugli hamburger doppi</p>
+                    <p class="text-center extra-space">NB: La promozione del mercoledì "Menù Hamburger Special" non è valida sugli hamburger doppi</p>
     			</div>
     			<div class="small-12 cell">
     				<h2>Hamburger Vegetariani<small>Serviti con patate fritte</small></h2>
