--- a/menu-delle-feste.html
+++ b/menu-delle-feste.html
@@ -51,7 +51,7 @@
     		<li class="toggle"><a href="javascript:void(0)"><i class="las la-bars la-2x"></i></a></li>
     	</ul>
     </nav>
-    <header><img src="assets/img/cover/cover-menu-hamburgers.jpeg" alt="Ca' Vecchia Beerstrot Menù"/></header>
+    <header><img src="assets/img/cover/cover-menu-feste.jpg" alt="Ca' Vecchia Beerstrot Menù"/></header>
     <div class="grid-container">
     	<div class="grid-x grid-margin-x">
     		<div class="small-12 medium-8 large-6 cell">
@@ -314,158 +314,6 @@
     								<img src="assets/img/prod/Entrecote_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Entrecôte">
     								<h3>Entrecôte<span class="price ">19</span></h3>
     								<p>Entrecôte di Manzetta Red Hereford irlandese.<span class=""><br><small>Allergeni: --</small></span></p>
-    							</div>
-    						</div>
-    					</div>
-    				</div>
-    			</div>
-    		</section>
-    		<section class="grid-x grid-margin-x grid-margin-y" id="dolce" data-magellan-target="dolce">
-    			<div class="small-12 cell">
-    				<h2>Dolci<small>Fatti in casa</small></h2>
-    				<div class="grid-x small-up-1 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
-    					<div class="cell">
-    						<div class="card">
-    							<div class="card-section">
-    								<img src="assets/img/prod/Cheesecake_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Cheesecake">
-    								<h3>Cheesecake<span class="price ">5</span></h3>
-    								<p>Cheesecake in stile new york. Squisitamente dolce, morbida e leggermente acidula.<span class=""><br><small>Allergeni: Frutta a Guscio, Glutine, Latte, Uova</small></span></p>
-    							</div>
-    						</div>
-    					</div>
-    					<div class="cell">
-    						<div class="card">
-    							<div class="card-section">
-    								<img src="assets/img/prod/Blondie_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Blondie">
-    								<h3>Blondie<span class="price ">5</span></h3>
-    								<p>Brownie con nocciole. Servito con crema al mascarpone e rhum.<span class=""><br><small>Allergeni: Frutta a Guscio, Glutine, Latte, Uova</small></span></p>
-    							</div>
-    						</div>
-    					</div>
-    				</div>
-    			</div>
-    		</section>
-    <!-- inizio layout no immagini -->
-    		<section class="grid-x grid-margin-x grid-margin-y" id="birra" data-magellan-target="birra">
-    			<div class="small-12 cell">
-    				<h2>Birra Artigianale in Bottiglia</h2>
-    				<div class="grid-x small-up-1 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
-    					<div class="cell">
-    						<div class="card">
-    							<div class="card-section">
-    								<h3>Landbier 1857 50cl<span class="price ">6</span></h3>
-    								<p class="">Helles tedesca non filtrata 5,3%. Birrificio Bayreuther.<span class=""><br><small>Allergeni: glutine</small></span></p>
-    							</div>
-    						</div>
-    					</div>
-    					<div class="cell">
-    						<div class="card">
-    							<div class="card-section">
-    								<h3>Weisse 50cl<span class="price ">6</span></h3>
-    								<p class="">Weisse tedesca 5,1%. Birrificio Maisel.<span class=""><br><small>Allergeni: glutine</small></span></p>
-    							</div>
-    						</div>
-    					</div>
-    					<div class="cell">
-    						<div class="card">
-    							<div class="card-section">
-    								<h3>Poculator 50cl<span class="price ">6</span></h3>
-    								<p class="">Rossa tedesca 7,6%. Birrificio Scheyern.<span class=""><br><small>Allergeni: glutine</small></span></p>
-    							</div>
-    						</div>
-    					</div>
-    					<div class="cell">
-    						<div class="card">
-    							<div class="card-section">
-    								<h3>Hattori Hanzo 50cl<span class="price ">6</span></h3>
-    								<p class="">Doppia IPA 8,3%. Birrificio Mukkeller.<span class=""><br><small>Allergeni: glutine</small></span></p>
-    							</div>
-    						</div>
-    					</div>
-    					<div class="cell">
-    						<div class="card">
-    							<div class="card-section">
-    								<h3>Calix Niger 33cl<span class="price ">6</span></h3>
-    								<p class="">Chocolate Stout 6,7%. Birrificio dei Castelli.<span class=""><br><small>Allergeni: glutine</small></span></p>
-    							</div>
-    						</div>
-    					</div>
-    				</div>
-    			</div>
-    		</section>
-    		<section class="grid-x grid-margin-x grid-margin-y" id="vino" data-magellan-target="vino">
-    			<div class="small-12 cell">
-    				<h2>Vino</h2>
-    				<div class="grid-x small-up-1 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
-    					<div class="cell">
-    						<div class="card">
-    							<div class="card-section">
-    								<h3>Fichimori Rosso igt Salento<span class="price ">18</span></h3>
-    								<p class="">Da bere freddo. Colore rosso rubino. Al naso prevalgono le note di frutta rossa, di fragola e lampone, seguite da delicate sensazioni di rosa canina. Al palato è fresco, sapido e scorrevole, caratterizzato da un ingresso morbido e un retrogusto fruttato.<span class=""><br><small>Allergeni: anidride solforosa e solfiti</small></span></p>
-    							</div>
-    						</div>
-    					</div>
-    					<div class="cell">
-    						<div class="card">
-    							<div class="card-section">
-    								<h3>Serrano doc<span class="price ">14,5</span></h3>
-    								<p class="">Cantina Umani Ronchi. Colore rosso rubino con riflessi violacei. Profumo pulito di visciola matura. Gran polpa e gran rotondità di sapore, uniti ad una buona struttura garantiscono una piacevole bevibilità.<span class=""><br><small>Allergeni: anidride solforosa e solfiti</small></span></p>
-    							</div>
-    						</div>
-    					</div>
-    					<div class="cell">
-    						<div class="card">
-    							<div class="card-section">
-    								<h3>Rubico Lacrima Morro Alba doc<span class="price ">15,5</span></h3>
-    								<p class="">Cantina Marotti Campi. Rosso vivace con riflessi porpora. Ha un aroma gradevole e fruttato con richiami discreti ai fiori di ciliegio e alla viola. Il gusto è morbido, vellutato e sapido.<span class=""><br><small>Allergeni: anidride solforosa e solfiti</small></span></p>
-    							</div>
-    						</div>
-    					</div>
-    					<div class="cell">
-    						<div class="card">
-    							<div class="card-section">
-    								<h3>Villa Bianchi Verdicchio doc<span class="price ">14,5</span></h3>
-    								<p class="">Cantina Umani Ronchi. Colore giallo paglierino brillante, con riflessi verdognoli. Al gusto esprime una piacevole struttura basata su note sapide e fresche, in cui risalta un finale con tipico sentore di mandorla.<span class=""><br><small>Allergeni: anidride solforosa e solfiti</small></span></p>
-    							</div>
-    						</div>
-    					</div>
-    					<div class="cell">
-    						<div class="card">
-    							<div class="card-section">
-    								<h3>Casal di Serra Verdicchio Superiore doc<span class="price ">18</span></h3>
-    								<p class="">Cantina Umani Ronchi. Colore giallo paglierino. Profumi intensi di fiori di campo, aromi di frutta a polpa gialla. Ricco e vellutato, con buona dose di freschezza e sapidità che bilancia l’eccellente morbidezza. Finale asciutto, persistente e fruttato.<span class=""><br><small>Allergeni: anidride solforosa e solfiti</small></span></p>
-    							</div>
-    						</div>
-    					</div>
-    					<div class="cell">
-    						<div class="card">
-    							<div class="card-section">
-    								<h3>Gewurztraminer doc<span class="price ">20</span></h3>
-    								<p class="">Cantina H.Lun. Un inconfondibile bouquet speziato dal sentore di rose e frutta secca, una corposità generosa e un gusto pieno e intenso caratterizzano questo tipico vino bianco dell&#x27;Alto Adige.<span class=""><br><small>Allergeni: anidride solforosa e solfiti</small></span></p>
-    							</div>
-    						</div>
-    					</div>
-    					<div class="cell">
-    						<div class="card">
-    							<div class="card-section">
-    								<h3>Ribolla Gialla igt<span class="price ">20</span></h3>
-    								<p class="">Cantina Branko. Al naso ricorda un bouquet di fiori bianchi. Al palato si evidenzia una giusta sapidità accompagnata dalla tipica acidità del vitigno.<span class=""><br><small>Allergeni: anidride solforosa e solfiti</small></span></p>
-    							</div>
-    						</div>
-    					</div>
-    					<div class="cell">
-    						<div class="card">
-    							<div class="card-section">
-    								<h3>Prosecco Lovre docg<span class="price ">18</span></h3>
-    								<p class="">Cantina Serre di Pederiva. Giallo paglierino spuma brillante, perlage fine e persistente. Soffice e cremoso al gusto, snello e croccante invita al brindisi.<span class=""><br><small>Allergeni: anidride solforosa e solfiti</small></span></p>
-    							</div>
-    						</div>
-    					</div>
-    					<div class="cell">
-    						<div class="card">
-    							<div class="card-section">
-    								<h3>Calafuria Rosato igt Salento<span class="price ">20</span></h3>
-    								<p class="">Al naso spicca per note fruttate e agrumate di pompelmo rosa, fiori di arancio, unite a delicate sensazioni gelsomino e tiglio. Al palato è gradevolmente fresco, contraddistinto da un’ottima persistenza aromatica e da una delicata sapidità.<span class=""><br><small>Allergeni: anidride solforosa e solfiti</small></span></p>
     							</div>
     						</div>
     					</div>
