--- a/menu-delle-feste.html
+++ b/menu-delle-feste.html
@@ -55,7 +55,7 @@
     <div class="grid-container">
     	<div class="grid-x grid-margin-x">
     		<div class="small-12 medium-8 large-6 cell">
-    			<h1 class="first-paragraph">Asporto Vigilia e Cenone</h1>
+    			<h1 class="first-paragraph">Asporto Vigilia e Ultimo dell'Anno</h1>
     			<p>Ordina il tuo asporto entro le 12:00 della vigilia o dell'ultimo dell'anno.
                 <ul class="orari-footer-schedule">
                     <li>Tramite <a href="https://api.whatsapp.com/send?phone=390718853384" target="_blank"><i class="lab la-whatsapp">&nbsp; </i>Whatsapp</a></li>
