--- a/menu-delle-feste.html
+++ b/menu-delle-feste.html
@@ -59,7 +59,7 @@
     			<p>Ordina il tuo asporto entro le 12:00 della vigilia o dell'ultimo dell'anno.
                 <ul class="orari-footer-schedule">
                     <li>Tramite <a href="https://api.whatsapp.com/send?phone=390718853384" target="_blank"><i class="lab la-whatsapp">&nbsp; </i>Whatsapp</a></li>
-                    <li>Oppure chiamaci allo <a href="tel:+390718853384"><i class="las la-phone">&nbsp; </i>071&nbsp;8853&nbsp;384</a> tutti i giorni tranne il martedì dopo le 18:00</li>
+                    <li>Oppure chiamaci allo <a href="tel:+390718853384"><i class="las la-phone">&nbsp; </i>071&nbsp;8853&nbsp;384</a> tutti i giorni dopo le 18:00 (tranne il martedì giorno di chiusura).</li>
                 </ul>
     		</div>
     	</div>
