--- a/menu.html
+++ b/menu.html
@@ -578,7 +578,7 @@
     					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
-    								<img src="assets/img/prod/Greco_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Cacio e Pepe">
+    								<img src="assets/img/prod/Greco_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Greco">
     								<h3>Greco<span class="price ">10,5</span></h3>
     								<p>Burger di manzo (180 grammi), melanzana grigliata, insalata riccia, salsa tzatziki.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
     							</div>
@@ -587,7 +587,7 @@
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
-    								<img src="assets/img/prod/GrecoDOPPIO_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Cacio e Pepe Doppio">
+    								<img src="assets/img/prod/GrecoDOPPIO_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Greco Doppio">
     								<h3>Greco Doppio<span class="price ">14,5</span></h3>
     								<p>Doppio burger di manzo (360 grammi), melanzana grigliata, insalata riccia, salsa tzatziki.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
     							</div>
@@ -632,7 +632,7 @@
     					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
-    								<img src="assets/img/prod/Norma_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Estivo">
+    								<img src="assets/img/prod/Norma_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Norma">
     								<h3>Norma<span class="price ">11,9</span></h3>
     								<p>Burger di manzo (180 grammi), crema di melanzane e basilico, pomodorini confit, ricotta salata.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
     							</div>
@@ -641,7 +641,7 @@
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
-    								<img src="assets/img/prod/NormaDOPPIO_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Estivo Doppio">
+    								<img src="assets/img/prod/NormaDOPPIO_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Norma Doppio">
     								<h3>Norma Doppio<span class="price ">15,9</span></h3>
     								<p>Doppio burger di manzo (360 grammi), crema di melanzane e basilico, pomodorini confit, ricotta salata.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
     							</div>
