--- a/menu-delle-feste.html
+++ b/menu-delle-feste.html
@@ -12,7 +12,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Asporto Vigilia e Cenone | Ca' Vecchia Beerstrot </title>
+    <title>Asporto Vigilia e Ultimo | Ca' Vecchia Beerstrot </title>
     <meta name="description" content="Preferisci festeggiare a casa? Nessun problema! Il nostro servizio di asporto è pensato per te. Scegli dal nostro menu festivo e porta a casa la magia del gusto di Beerstrot. Stuzzicherie, Hamburger, Sushi, Dolci, Birre e Vini; tutto preparato con cura dai nostri chef.">
     <meta name="keywords" content="Menu Feste Dicembre Ca&#x27; Vecchia Beerstrot, Hamburger gourmet Filottrano, Sushi fresco Filottrano, Sushi fresco Ancona, Piatti artigianali Ca&#x27; Vecchia Beerstrot, Specialità birra artigianale Ca&#x27; Vecchia , Tendenze gastronomiche moderne">
     <meta name="author" content="Ca' Vecchia Beerstrot">
