--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
     		<div class="grid-x grid-margin-x grid-margin-y">
     			<div class="small-12 cell">
     				<h1 class="first-paragraph">Orari</h1>
-    			</div>
+                    <p>Il 24 e il 31 dicembre siamo aperti per aperitivo dalle 18 alle 20.30 e facciamo solo servizio da Asporto.</p>
+                    <a href="menu-delle-feste.html" class="button" >Scopri il Menù Asporto del 24 e 31 dicembre</a>
+                </div>
     		</div>
     		<div class="grid-x grid-margin-x grid-margin-y">
     			<div class="small-12 medium-6 cell">
