--- a/menu-delle-feste.html
+++ b/menu-delle-feste.html
@@ -56,10 +56,10 @@
     	<div class="grid-x grid-margin-x">
     		<div class="small-12 medium-8 large-6 cell">
     			<h1 class="first-paragraph">Asporto Vigilia e Ultimo dell'Anno</h1>
-    			<p>Ordina il tuo asporto entro le 12:00 della vigilia di Natale o dell'ultimo dell'anno.
+    			<p>Ordina il tuo asporto entro le 12:00 della <strong>Vigilia di Natale</strong> o dell'<strong>Ultimo dell'Anno</strong>.
                 <ul class="orari-footer-schedule">
-                    <li>Tramite <a href="https://api.whatsapp.com/send?phone=390718853384" target="_blank"><i class="lab la-whatsapp">&nbsp; </i>Whatsapp</a></li>
-                    <li>Oppure chiamaci allo <a href="tel:+390718853384"><i class="las la-phone">&nbsp; </i>071&nbsp;8853&nbsp;384</a> tutti i giorni dopo le 18:00 (tranne il martedì giorno di chiusura).</li>
+                    <li>Tramite <strong><a href="https://api.whatsapp.com/send?phone=390718853384" target="_blank"><i class="lab la-whatsapp"></i>Whatsapp</a></strong></li>
+                    <li>Oppure chiamaci allo <strong><a href="tel:+390718853384"><i class="las la-phone"></i>071&nbsp;8853&nbsp;384</a></strong> tutti i giorni dopo le 18:00 (tranne il martedì giorno di chiusura).</li>
                 </ul>
     		</div>
     	</div>
