--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     		</div>
     	</div>
     </header>
-    <div class="panel-home-n">
+    <div class="callout secondary" style="margin-top: 0px !important;">
         <div class="grid-container">
             <div class="grid-x grid-margin-x grid-margin-y">
                 <div class="small-12 cell">
@@ -87,6 +87,8 @@
                 </div>
             </div>
         </div>
+    </div>
+    <div class="panel-home-n">
     	<div class="grid-container">
     		<div class="grid-x grid-margin-x grid-margin-y">
     			<div class="small-12 cell">
