--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     		</div>
     	</div>
     </header>
-    <div class="callout small secondary" style="margin-top: 0px !important;">
+    <div class="callout small success" style="margin-top: 0px !important;">
         <div class="grid-container">
             <div class="grid-x grid-margin-x grid-margin-y">
                 <div class="small-12 cell">
