--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <div class="grid-x grid-margin-x grid-margin-y">
                 <div class="small-12 medium-6 cell">
                     <h2>Asporto Vigilia e Ultimo dell'Anno</h2>
-                    <p>Il 24 e il 31 dicembre ordina il tuo asporto entro le 12:00 del 24 o del 31 dicembre.</p>
+                    <p>Ordina il tuo asporto entro le 12:00 del 24 o del 31 dicembre.</p>
                     <a href="menu-delle-feste.html" class="button" >Scopri il Menù Asporto del 24 e 31 dicembre</a>
                 </div>
                 <div class="small-12 medium-6 cell">
