--- a/menu.html
+++ b/menu.html
@@ -1087,14 +1087,30 @@
     							</div>
     						</div>
     					</div>
-                        <div class="cell">
+                        <!-- <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <h3>Guastafeste 33cl<span class="price ">6</span></h3>
+                                    <p class="">Birrificio Mukkeller. Belgian Strong Ale 10%. Ambrata con malti aromatici che le conferiscono saporti fruttati. Birra pensata per il Natale<span class=""><br><small>Allergeni: glutine</small></span></p>
+                                </div>
+                            </div>
+                        </div> -->
+                        <!-- <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <h3>Mukkamannara 33cl<span class="price ">6</span></h3>
+                                    <p class="">Birrificio Mukkeller. Belgian Strong Ale 9,3%. Bruna con aroma e sapore di malto, caramello, uva passa, frutti rossi secchi. Una birra ricca, forte, complessa.<span class=""><br><small>Allergeni: glutine</small></span></p>
+                                </div>
+                            </div>
+                        </div> -->
+                        <!-- <div class="cell">
                             <div class="card">
                                 <div class="card-section">
                                     <h3>Zona Mugnetti 50cl<span class="price ">6</span></h3>
                                     <p class="">Birrificio Mukkeller. Belgian Ale 6%. Colore arancio chiaro, gusto morbido con sentori di arance e limoni.<span class=""><br><small>Allergeni: glutine</small></span></p>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
     					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
@@ -1119,14 +1135,14 @@
                                 </div>
                             </div>
                         </div> -->
-                        <div class="cell">
+                        <!-- <div class="cell">
                             <div class="card">
                                 <div class="card-section">
                                     <h3>Assaggio Solo 50cl<span class="price ">6</span></h3>
                                     <p class="">Birrificio Mukkeller. America pale ale 5,5%. Birra esplosiva facile da bere.<span class=""><br><small>Allergeni: glutine</small></span></p>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
     					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
