--- a/menu.html
+++ b/menu.html
@@ -1087,22 +1087,22 @@
     							</div>
     						</div>
     					</div>
-                        <!-- <div class="cell">
+                        <div class="cell">
                             <div class="card">
                                 <div class="card-section">
                                     <h3>Guastafeste 33cl<span class="price ">6</span></h3>
                                     <p class="">Birrificio Mukkeller. Belgian Strong Ale 10%. Ambrata con malti aromatici che le conferiscono saporti fruttati. Birra pensata per il Natale<span class=""><br><small>Allergeni: glutine</small></span></p>
                                 </div>
                             </div>
-                        </div> -->
-                        <!-- <div class="cell">
+                        </div>
+                        <div class="cell">
                             <div class="card">
                                 <div class="card-section">
                                     <h3>Mukkamannara 33cl<span class="price ">6</span></h3>
                                     <p class="">Birrificio Mukkeller. Belgian Strong Ale 9,3%. Bruna con aroma e sapore di malto, caramello, uva passa, frutti rossi secchi. Una birra ricca, forte, complessa.<span class=""><br><small>Allergeni: glutine</small></span></p>
                                 </div>
                             </div>
-                        </div> -->
+                        </div>
                         <!-- <div class="cell">
                             <div class="card">
                                 <div class="card-section">
@@ -1143,22 +1143,22 @@
                                 </div>
                             </div>
                         </div> -->
-    					<!-- <div class="cell">
+    					<div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Ridopoco 50cl<span class="price ">6</span></h3>
     								<p class="">Birrificio Mukkeller. America pale ale 6,2%. Corpo leggero, massiccia luppolatura.<span class=""><br><small>Allergeni: glutine</small></span></p>
     							</div>
     						</div>
-    					</div> -->
-                        <!-- <div class="cell">
+    					</div>
+                        <div class="cell">
                             <div class="card">
                                 <div class="card-section">
                                     <h3>Mazzu de Fiuri 50cl<span class="price ">6</span></h3>
                                     <p class="">Birrificio Mukkeller. IPA 6%. Birra bionda dall'amaro persistente e speziato.<span class=""><br><small>Allergeni: glutine</small></span></p>
                                 </div>
                             </div>
-                        </div> -->
+                        </div>
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
