--- a/menu.html
+++ b/menu.html
@@ -700,7 +700,7 @@
                                     <p>Doppio burger di manzo (360 grammi), gorgonzola, guanciale, pomodorini confit.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
                                 </div>
                             </div>
-                        </div>
+                       <!-- </div>
                         <div class="cell">
                             <div class="card">
                                 <div class="card-section">
@@ -718,7 +718,7 @@
                                     <p>Doppio burger di manzo (360 grammi), gorgonzola, speck croccante, crema di zucca, amaretto.<span class=""><br><small>Allergeni: Glutine, Uova, Latte, Frutta a guscio</small></span></p>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
     				</div>
                     <p class="text-center extra-space">NB: La promozione del mercoledì "Menù Hamburger Special" non è valida sugli hamburger doppi</p>
     			</div>
