--- a/menu.html
+++ b/menu.html
@@ -665,7 +665,7 @@
     							</div>
     						</div>
     					</div>
-                        <div class="cell">
+                        <!-- <div class="cell">
                             <div class="card">
                                 <div class="card-section">
                                     <img src="assets/img/prod/Autunno_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Autunno">
@@ -682,7 +682,7 @@
                                     <p>Doppio burger di manzo (360 grammi), scamorza affumicata, speck croccante, crema di funghi.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                         <div class="cell">
                             <div class="card">
                                 <div class="card-section">
