--- a/riserva-un-tavolo.html
+++ b/riserva-un-tavolo.html
@@ -52,9 +52,12 @@
     	</ul>
     </nav>
     <header class="grid-container">
-        <div class="grid-x grid-margin-x grid-margin-y">
+        <div class="grid-x grid-margin-x">
             <div class="small-12 cell">
                 <h1 class="first-paragraph-no-hero" id="ttitle">Riserva un Tavolo</h1>
+            </div>
+            <div class="small-12 cell callout secondary">
+                <p>Nota bene: Il giorno 24 e 31 dicembre siamo aperti solo per aperitivo dalle 18 alle 20.30. <br>Non è necessario riservare un tavolo.</p>
             </div>
         </div>
     </header>
