--- a/riserva-un-tavolo.html
+++ b/riserva-un-tavolo.html
@@ -56,7 +56,7 @@
             <div class="small-12 cell">
                 <h1 class="first-paragraph-no-hero" id="ttitle">Riserva un Tavolo</h1>
             </div>
-            <div class="small-12 cell callout secondary">
+            <div class="small-12 cell callout primary">
                 <p>Nota bene: Il giorno 24 e 31 dicembre siamo aperti solo per aperitivo dalle 18 alle 20.30. <br>Non è necessario riservare un tavolo.</p>
             </div>
         </div>
