--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
             </div>
             <div class="grid-x grid-margin-x grid-margin-y">
                 <div class="small-12 medium-6 cell">
-                    <h2>Asporto Vigilia e Ultimo dell'Anno</h2>
-                    <p>Ordina il tuo asporto entro le 12:00 del 24 o del 31 dicembre.</p>
-                    <a href="menu-delle-feste.html" class="button" >Scopri il Menù Asporto del 24 e 31 dicembre</a>
+                    <h2>Asporto Ultimo dell'Anno</h2>
+                    <p>Ordina il tuo asporto entro le 15:00 del 31 dicembre.</p>
+                    <a href="menu-delle-feste.html" class="button" >Scopri il Menù Asporto del 31 dicembre</a>
                 </div>
                 <div class="small-12 medium-6 cell">
                     <h2>Aperitivo Special</h2>
-                    <p>Il 24 e il 31 dicembre dalle 18:00 alle 20:30 festeggia con noi:</p>
+                    <p>Il 31 dicembre dalle 18:00 alle 20:30 festeggia con noi:</p>
                     <ul>
                         <li><strong>Aperitivo di sushi</strong> (6 pezzi di uramaki, 2 pezzi di hosomaki, 2 nigiri) con calice di vino, birra artigianale media o spritz a 15€.</li>
                         <li><strong>Aperitivo di fritti</strong> (4 olive all'ascolana, 4 bocconcini di pollo, 4 falafel, cipolle in tempura) con calice di vino, birra artigianale media o spritz a 15€.</li>
